[gd_scene load_steps=3 format=2]

[ext_resource path="res://controls/controllers/control_settings.gd" type="Script" id=1]
[ext_resource path="res://font.tres" type="DynamicFont" id=2]

[node name="control_settings" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.5
margin_top = -241.5
margin_right = 280.5
margin_bottom = 241.5

[node name="Panel" type="Panel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 554.0
margin_bottom = 476.0

[node name="type" type="OptionButton" parent="PanelContainer/Panel"]
margin_left = 251.0
margin_top = 72.0
margin_right = 450.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 2 )

[node name="Label" type="Label" parent="PanelContainer/Panel/type"]
margin_left = -215.844
margin_top = 3.25801
margin_right = -87.8444
margin_bottom = 27.258
custom_fonts/font = ExtResource( 2 )
text = "Control Type"

[node name="back" type="Button" parent="PanelContainer/Panel"]
margin_left = 48.8466
margin_top = 398.782
margin_right = 139.847
margin_bottom = 431.782
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="static_d" type="CheckButton" parent="PanelContainer/Panel"]
margin_left = 20.1486
margin_top = 174.316
margin_right = 290.149
margin_bottom = 215.316
rect_scale = Vector2( 1.25, 1.25 )
custom_fonts/font = ExtResource( 2 )
text = "Static D Pads"

[node name="trans" type="HSlider" parent="PanelContainer/Panel"]
margin_left = 293.663
margin_top = 285.625
margin_right = 462.663
margin_bottom = 301.625
rect_scale = Vector2( 1, 1.5 )
max_value = 255.0
value = 128.0

[node name="Label" type="Label" parent="PanelContainer/Panel"]
margin_left = 24.2985
margin_top = 284.408
margin_right = 223.298
margin_bottom = 313.408
custom_fonts/font = ExtResource( 2 )
text = "D pad Transparency"
[connection signal="item_selected" from="PanelContainer/Panel/type" to="." method="_on_type_item_selected"]
[connection signal="pressed" from="PanelContainer/Panel/back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="PanelContainer/Panel/static_d" to="." method="_on_static_d_toggled"]
[connection signal="value_changed" from="PanelContainer/Panel/trans" to="." method="_on_trans_value_changed"]
